Adding Git for windows

--- a/winget-app.json
+++ b/winget-app.json
@@ -16,6 +16,9 @@
 				// 	"PackageIdentifier" : "Docker.DockerDesktop"
 				// },
 				{
+					"PackageIdentifier" : "Git.Git"
+				},
+				{
 					"PackageIdentifier" : "GitHub.cli"
 				},
 				{
