Only install one Ubuntu version for WSL

--- a/winget-app.json
+++ b/winget-app.json
@@ -9,9 +9,9 @@
 				{
 					"PackageIdentifier" : "Canonical.Ubuntu.2204"
 				},
-				{
-					"PackageIdentifier" : "Canonical.Ubuntu"
-				},
+				// {
+				// 	"PackageIdentifier" : "Canonical.Ubuntu"
+				// },
 				// {
 				// 	"PackageIdentifier" : "Docker.DockerDesktop"
 				// },
