Added obsidian.md to work laptop

--- a/hosts/ist-app-wl-0200.json
+++ b/hosts/ist-app-wl-0200.json
@@ -7,6 +7,7 @@
         "GoogleChrome",
         "microsoft-windows-terminal",
         "nodejs",
+        "obsidian",
         "python3",
         "slack",
         "terraform",
