Adding misc packages

--- a/hosts/ist-app-wl-0200.json
+++ b/hosts/ist-app-wl-0200.json
@@ -1,16 +1,20 @@
 {
     "chocolatey": [
         "awscli",
+        "azure-cli",
         "discord",
-        "docker-desktop",
         "git",
         "GoogleChrome",
         "microsoft-windows-terminal",
+        "multipass",
         "nodejs",
         "obsidian",
+        "podman-desktop",
         "python3",
+        "rust",
         "slack",
         "terraform",
+        "todoist",
         "vagrant",
         "vscode",
         "vscode-ansible",
