Test the basics

--- a/.github/workflows/test-install.yaml
+++ b/.github/workflows/test-install.yaml
@@ -12,8 +12,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Execute PowerShell Configuration Script
-        run: "./install.ps1 -Verbose -Elevated -ComputerName validate-config"
+    #   - name: Execute PowerShell Configuration Script
+    #     run: "./install.ps1 -Verbose -Elevated -ComputerName validate-config"
 
       - name: Execute PowerShell Validation Script
         run: "./validate-install.ps1"
